# fitness

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_streamlit.txt  setup.py  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
api/: auth.py  main.py  schemas.py
artifacts/: ranking_model.onnx  ranking_model.onnx.data  ranking_model_kaggle.pt  training_report_kaggle.json
config/: settings.py
data/: meta_emb.csv
data/kaggle_raw/daily_activity_2024/: fitness_track_daily_activity.csv
data/kaggle_raw/fitbit/: dailyActivity_merged.csv  heartrate_seconds_merged.csv  sleepDay_merged.csv  weightLogInfo_merged.csv
data/kaggle_raw/gym_members/: gym_members_exercise_tracking.csv
data/kaggle_raw/mental_health/: mental_health.csv
data_pipeline/: database.py  kafka_simulator.py  schemas.py
data_pipeline/kaggle/: downloader.py  etl.py  synthetic_datasets.py
feature_repo/: definitions.py  feature_store.yaml
frontend/: app.py
frontend/components/: charts.py  db_utils.py  inference.py  theme.py
frontend/pages/: 1_⚡_Live_Session.py  2_🥗_Nutrition.py  3_🔬_AB_Testing.py  4_🔭_Data_Explorer.py
monitoring/: grafana_dashboard.json  prometheus_rules.yaml
ranking/: export_onnx.py  features.py  model.py
retrieval/: embeddings.py  vector_store.py
scripts/: ab_test.py  benchmark.py  index_content.py  populate_fallback_cache.py  seed_data.py  train_kaggle.py  train_model.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_features.py  test_model.py
