[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "fitness-rec-engine"
version     = "1.0.0"
description = "Ultra-low latency two-stage multi-modal fitness recommendation engine"
requires-python = ">=3.11"
readme      = "README.md"
license     = { text = "MIT" }

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "torch>=2.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "qdrant-client[async]>=1.9",
    "redis[asyncio]>=5.0",
    "streamlit>=1.35",
    "plotly>=5.22",
    "python-dotenv>=1.0",
    "structlog>=24.2",
    "tenacity>=8.3",
    "orjson>=3.10",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "fakeredis>=2.23",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "bandit>=1.7",
]
streamlit = [
    "streamlit>=1.35",
    "plotly>=5.22",
    "altair>=5.3",
    "scipy>=1.13",
]

[project.scripts]
fitai-seed      = "scripts.seed_data:main_sync"
fitai-index     = "scripts.index_content:main_sync"
fitai-train     = "scripts.train_kaggle:main_sync"
fitai-serve     = "api.main:main"

[tool.setuptools.packages.find]
where   = ["."]
include = [
    "api*", "config*", "data_pipeline*",
    "feature_repo*", "ranking*", "retrieval*",
    "scripts*", "frontend*",
]
exclude = ["tests*", "*.egg-info"]

# ── Ruff (replaces flake8 + isort + pyupgrade) ────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["."]

[tool.ruff.lint]
select  = ["E","F","W","I","N","UP","B","S","ANN001","ANN201"]
ignore  = [
    "S101",   # assert statements fine in tests
    "S311",   # random() fine for simulation/telemetry
    "ANN001", # too verbose for internal helpers
    "ANN201",
    "B008",   # FastAPI Depends() pattern
    "E501",   # line too long — black handles it
]
per-file-ignores = { "tests/**" = ["S","ANN"], "scripts/**" = ["ANN"] }

[tool.ruff.lint.isort]
known-first-party = ["api","config","data_pipeline","ranking","retrieval","frontend"]

# ── Black ──────────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py311"]
skip-magic-trailing-comma = false

# ── Mypy ───────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = false
ignore_missing_imports = true
exclude                = ["migrations/","tests/"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode      = "auto"
testpaths         = ["tests"]
addopts           = "-v --tb=short --timeout=30"
filterwarnings    = ["ignore::DeprecationWarning"]

# ── Coverage ───────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["api","ranking","retrieval","data_pipeline","config"]
omit     = ["*/tests/*","*/migrations/*","*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
